--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 .DS_Store
-app/CodeGenerator/
-app/Console/Commands/GenerateCodeCommand.php
-/storage/CodeGenerator-templates
-/storage/*.json
-/tests/CodeGeneratorTest.php
-/tests/CommandTest.php
-/tests/ConnectionTest.php
+.gitignore
+/storage/doordashdrive.json
